[gd_scene load_steps=15 format=3 uid="uid://c65mquucseebl"]

[ext_resource type="Script" uid="uid://bx6qfmxs4x33r" path="res://juego/jugador.gd" id="1_uljyr"]
[ext_resource type="Texture2D" uid="uid://bropuciniy2uq" path="res://assets/fotograma0000.png" id="2_xio2r"]
[ext_resource type="Texture2D" uid="uid://c41ten61yixl3" path="res://assets/fotograma0001.png" id="3_u0k8x"]
[ext_resource type="Texture2D" uid="uid://c0t20x5qhy8ea" path="res://assets/9b24ff91-612c-462c-b514-ebe156917de4.png" id="5_nxbp7"]
[ext_resource type="Texture2D" uid="uid://cpdcmwj0wda7h" path="res://assets/14c86dfa-e0a0-44a0-9a45-97e520788210.png" id="6_4rpfj"]
[ext_resource type="Texture2D" uid="uid://cfj58ug6ivtmm" path="res://assets/32fc9317-18ae-479c-9bc3-deb03942a11b.png" id="7_7qqnn"]
[ext_resource type="Texture2D" uid="uid://c0l8ynebjij2a" path="res://assets/052a969f-99d6-4758-9da7-769bca77e8ee.png" id="8_7roog"]
[ext_resource type="Texture2D" uid="uid://cj34024u2nvs" path="res://assets/86d3ed19-7932-4c22-a1ca-78ca8fca160b.png" id="9_mbreb"]
[ext_resource type="Texture2D" uid="uid://dunx88cvgupe3" path="res://assets/38799c0b-7cba-4a5d-b249-86290185a072.png" id="10_1x5lc"]
[ext_resource type="Texture2D" uid="uid://dnolvlawahf3o" path="res://assets/a844c12b-c077-4555-86f0-7442e383e3d8.png" id="12_1gm7v"]

[sub_resource type="SpriteFrames" id="SpriteFrames_x3eyv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_xio2r")
}, {
"duration": 1.0,
"texture": ExtResource("3_u0k8x")
}, {
"duration": 1.0,
"texture": ExtResource("3_u0k8x")
}, {
"duration": 1.0,
"texture": ExtResource("3_u0k8x")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_7roog")
}],
"loop": false,
"name": &"standing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_7roog")
}, {
"duration": 1.0,
"texture": ExtResource("5_nxbp7")
}, {
"duration": 1.0,
"texture": ExtResource("12_1gm7v")
}, {
"duration": 1.0,
"texture": ExtResource("9_mbreb")
}, {
"duration": 1.0,
"texture": ExtResource("10_1x5lc")
}, {
"duration": 1.0,
"texture": ExtResource("7_7qqnn")
}, {
"duration": 1.0,
"texture": ExtResource("6_4rpfj")
}],
"loop": true,
"name": &"walking",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ekb8"]
size = Vector2(26.75, 8.625)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uljyr"]
size = Vector2(25, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m64gt"]
size = Vector2(21, 48)

[node name="jugador" type="CharacterBody2D"]
scale = Vector2(4.5, 4.5)
collision_layer = 2
script = ExtResource("1_uljyr")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0.5000019, -0.9999962)
scale = Vector2(0.08203124, 0.10714287)
sprite_frames = SubResource("SpriteFrames_x3eyv")
animation = &"standing"
metadata/_edit_group_ = true

[node name="HitboxGolpe" type="Area2D" parent="."]
position = Vector2(33, 49)
scale = Vector2(1.0466549, 1.0466549)
collision_layer = 2
collision_mask = 4
metadata/_edit_group_ = true

[node name="AttackHitbox" type="CollisionShape2D" parent="HitboxGolpe"]
position = Vector2(-15, -57)
scale = Vector2(-1.8804303, -2.453252)
shape = SubResource("RectangleShape2D_6ekb8")
debug_color = Color(1, 0.0013254246, 0.09850671, 0.41960785)

[node name="HurtBox" type="Area2D" parent="."]
collision_mask = 12
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0.5, -1.5)
shape = SubResource("RectangleShape2D_uljyr")
debug_color = Color(0.84494513, 0.0010248, 0.91316384, 0.41960785)

[node name="HitboxFisica" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -1)
shape = SubResource("RectangleShape2D_m64gt")
debug_color = Color(0, 0.56141794, 0.8800112, 0.41960785)
metadata/_edit_group_ = true

[node name="Camera2D" type="Camera2D" parent="."]
metadata/_edit_group_ = true

[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_sprite_frame_changed"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
